# Advance-Programming-Technique-Project3

./: CMakeLists.txt  README.md  Tower128.txt  Tower512.txt  towerToImg.m
Final Submission/p3/: CMakeLists.txt
Final Submission/p3/cthreads/: MainThread.cc  complex.cc  input_image.cc
Final Submission/p3/cuda/: complex.cu
Final Submission/p3/mpi/: complex.cc  p32.cpp
P2s/: heat2D3D.cu  main.cu
documentation/: FinalReport.docx  formatMatched.txt  import256.m  outCompare256.m  outFilefftshift.txt  picToText128.m  picToText2048.m  picToText512.m  recentcudaoutput.txt  towerToImg.m  ~$nalReport.docx
documentation/cudaOutPut/: cudaout128.txt
src/: CMakeLists.txt  main1.cc
src/cthreads/: MainThread.cc  complex.cc  input_image.cc  test.txt
src/cuda/: complex.cuh  complex.h  mainofCuda.cu
src/mpi/: MainThread.cc  complex.cc  example.txt  input_image.cc  main  myoutbast.txt
